# test-codegen-new

./: README.md  pyproject.toml
doc/: client.md
doc/controllers/: article.md  authentication.md  customer.md  dispo.md  dms-document.md  order.md  permission.md  print.md  scanning.md  scripting.md  special-invoice.md  status-manager.md  unit.md
doc/models/: access-level-enum.md  additional-charging-condition-type-enum.md  additional-status-type-enum.md  additional-usage-enum.md  address-type-1-enum.md  address-type-enum.md  adress-type-enum.md  allow-deletion-enum.md  appointment-type-enum.md  archiv-type-enum.md  automatic-toll-calculation-enum.md  basis-enum.md  blocking-weight-base-enum.md  bordero-kind-enum.md  bordero-type-enum.md  calculation-base-enum.md  cancellation-state-enum.md  cargo-insurance-enum.md  carrier-condition-type-1-enum.md  carrier-condition-type-2-enum.md  carrier-condition-type-enum.md  carrier-main-carriage-type-enum.md  carrier-optimization-type-enum.md  cost-per-enum.md  credit-accounting-date-enum.md  credit-booking-enum.md  credit-condition-code-enum.md  credit-freight-payer-optimization-code-enum.md  credit-invoicing-period-enum.md  credit-invoicing-period-grouping-enum.md  crediting-account-enum.md  custom-print-base-enum.md  customer-manager-type-enum.md  customer-scope-enum.md  customer-type-enum.md  damage-state-enum.md  data-exchange-format-enum.md  data-exchange-type-enum.md  data-source-enum.md  day-of-week-1-enum.md  (+282 more)
lispublicservices/: __init__.py  api_helper.py  configuration.py  lispublicservices_client.py
(+345 files in other folders)
